# pose2sim

./: .gitignore  CITATION.cff  GUI.py  Pose2SimInstaller.spec  README.md  pose2sim.yaml  pose2sim_installer.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: a_problem.yml  help-wanted-.md  help_wanted.yml  pose2sim--python--os-versions.md
.github/workflows/: continuous-integration.yml  jekyll-gh-pages.yml  joss_pdf.yml  publish-on-release.yml  python-package.yml
Content/: paper.bib  paper.md
Content/website/: build.py  index.html  index.md  script.js  style.css
GUI/: app.py  blur.py  config_generator.py  intro.py  language_manager.py  main.py  pose2sim_installer.py  utils.py
GUI/cache/: citation_data.json
GUI/tabs/: __init__.py  about_tab.py  activation_tab.py  advanced_tab.py  batch_tab.py  calibration_tab.py  pose_model_tab.py  prepare_video_tab.py  synchronization_tab.py  tutorial_tab.py  visualization_tab.py  welcome_tab.py
GUI/templates/: 2d_config_template.toml  3d_config_template.toml
Pose2Sim/: Pose2Sim.py  __init__.py  augmenter.py  bundle_adjustment.py  calibrate_cams.py  calibration.py  common.py  config.py  fake_file.py  filter_3d.py  filtering.py  kinematics.py  markerAugmentation.py  model.py  personAssociation.py  poseEstimation.py  scaling2IK.py  skeletons.py  source.py  subject.py  synchronization.py  synchronize_cams.py  test_new_personAssociation.py  tests.py  track_2d.py  triangulate_3d.py  triangulation.py  utils.py
Pose2Sim/Demo/: Demo.py  test.py
Pose2Sim/Demo/OpenSim_Setup/: IK_Setup_Pose2Sim_Blazepose.xml  IK_Setup_Pose2Sim_Body135.xml  IK_Setup_Pose2Sim_Body25.xml  IK_Setup_Pose2Sim_Coco18.xml  Model_Pose2Sim_Body135.osim  Scaling_Setup_Pose2Sim_Coco133.xml  Scaling_Setup_Pose2Sim_Halpe26.xml  Scaling_Setup_Pose2Sim_Halpe68_136.xml
Pose2Sim/Demo/Opensim/: IK_Setup_Pose2Sim_Body25b.xml  IK_Setup_Pose2Sim_Coco133.xml  IK_Setup_Pose2Sim_Halpe26.xml  IK_Setup_Pose2Sim_Halpe68_136.xml  Model_Pose2Sim_Halpe68_136.osim  Scaling_Setup_Pose2Sim_Blazepose.xml  Scaling_Setup_Pose2Sim_Body135.xml  Scaling_Setup_Pose2Sim_Body25.xml  Scaling_Setup_Pose2Sim_Body25b.xml  Scaling_Setup_Pose2Sim_Coco133.xml  Scaling_Setup_Pose2Sim_Coco18.xml  Scaling_Setup_Pose2Sim_Halpe26.xml  _ik_marker_errors.sto
Pose2Sim/Demo/S00_Demo_Session/: Config.toml  test.py
Pose2Sim/Demo/S01_Empty_Session/: Config.toml
Pose2Sim/Demo/User/: Config.toml  test.toml
Pose2Sim/Demo/calib-2d/: Calib_qca.toml
Pose2Sim/Demo/calibration/: Calib.qca.txt  Calib_intcheckerboard_extrandom.toml  Calib_intcheckerboard_extscene.toml  Calib_intcheckerboard_extzeros.toml.old  Calib_qualisys.toml  Calib_qualisys.toml.old
Pose2Sim/Demo/opensim/: Balancing_for_IK.trc  IK_Setup_Pose2Sim_Body25b.xml  Model_Pose2Sim_Body25b.osim  Scaling_Setup_Pose2Sim_Body25b.xml  Standing_for_Scaling.trc
Pose2Sim/Demo_Batch/: Config.toml
Pose2Sim/Demo_Batch/Demo_MultiPerson/: Config.toml
Pose2Sim/Demo_Batch/Demo_SinglePerson/: Config.toml
Pose2Sim/Demo_Batch/Trial_1/: Config.toml
Pose2Sim/Demo_Batch/Trial_2/: Config.toml
Pose2Sim/Demo_MultiPerson/: Config.toml
Pose2Sim/Demo_MultiPerson/calibration/: Calib.qca.txt  Calib.qca.txt.old
Pose2Sim/Demo_MultiPerson/kinematics/: Demo_MultiPerson_P1_0-100_filt_butterworth.csv
Pose2Sim/Demo_SinglePerson/: Config.toml
Pose2Sim/Demo_SinglePerson/calibration/: Calib_scene.toml
Pose2Sim/Empty_project/User/: Config.toml
Pose2Sim/MarkerAugmenter/: utils.py  utilsDataman.py
Pose2Sim/OpenSim_Setup/: IK_Setup_Pose2Sim_Blazepose.xml  IK_Setup_Pose2Sim_Body135.xml  IK_Setup_Pose2Sim_Body25.xml  IK_Setup_Pose2Sim_Body25b.xml  IK_Setup_Pose2Sim_Coco133.xml  IK_Setup_Pose2Sim_Coco17.xml  IK_Setup_Pose2Sim_Coco18.xml  IK_Setup_Pose2Sim_Halpe26.xml  IK_Setup_Pose2Sim_Halpe68_136.xml  IK_Setup_Pose2Sim_LSTM.xml  IK_Setup_Pose2Sim_withHands_LSTM.xml  IK_Setup_Pose2Sim_withHands_LSTM.xml.xml  IK_Setup_Pose2Sim_withoutHands_LSTM.xml  Markers_BlazePose.xml  Markers_Body135.xml  Markers_Body25.xml  Markers_Body25b.xml  Markers_Coco133.xml  Markers_Coco17.xml  Markers_Halpe26.xml  Markers_Halpe68_136.xml  Markers_LSTM.xml  Markers_SKEL.xml  Model_Pose2Sim.osim  Model_Pose2Sim_BlazePose.osim  Model_Pose2Sim_Body135.osim  Model_Pose2Sim_Body25.osim  Model_Pose2Sim_Body25b.osim  Model_Pose2Sim_Body25b_contacts_muscles.osim  Model_Pose2Sim_Coco133.osim  Model_Pose2Sim_Coco17.osim  Model_Pose2Sim_Coco18.osim  Model_Pose2Sim_Halpe26.osim  Model_Pose2Sim_Halpe68_136.osim  Model_Pose2Sim_LSTM.osim  Model_Pose2Sim_SKEL.osim  Model_Pose2Sim_contacts_muscles.osim  Model_Pose2Sim_muscles_flex.osim  Model_Pose2Sim_simple.osim  Scaling_Setup_Pose2Sim_Blazepose.xml  (+9 more)
Pose2Sim/Opensim/: IK_Setup_Pose2Sim_Halpe26.xml  Model_Pose2Sim_Body25b_contacts_muscles.osim  Scaling_Setup_Pose2Sim_Body135.xml
Pose2Sim/Poselib/: __init__.py  version.py
Pose2Sim/S00_Demo_BatchSession/: Config.toml  test.py  tests.py
Pose2Sim/S00_Demo_Session/: Config.toml
Pose2Sim/S01_Demo_SingleTrial/: Config.toml
Pose2Sim/Utilities/: AlphaPose_to_OpenPose.py  Blazepose_runsave.py  DLC_to_OpenPose.py  MMPose_to_OpenPose.py  RTM_converter.py  __init__.py  blazepose_runsave.py  bodykin_from_mot_osim.py  c3d_to_trc.py  calib_easymocap_to_toml.py  calib_from_checkerboard.py  calib_mcdev_to_toml.py  calib_qca_to_toml.py  calib_toml_to_easymocap.py  calib_toml_to_opencap.py  calib_toml_to_qca.py  calib_toml_to_yml.py  calib_yml_to_toml.py  combine_trc.py  csv_from_mot_osim.py  face_blurring.py  json_display_with_img.py  json_display_without_img.py  osim_to_bvh.py  reproj_from_trc_calib.py  skeletons.py  synchronize_cams_draft.py  tests.py  trc_Zup_to_Yup.py  trc_combine.py  trc_desample.py  trc_filter.py  trc_from_easymocap.py  trc_from_mot_osim.py  trc_gaitevents.py  trc_mot_filter.py  trc_plot.py  trc_rotate.py  trc_scale.py  trc_to_c3d.py
Pose2Sim/stages/: base.py  calibration.py  pose_estimation.py
dav/: Config.toml  activate_pose2sim_conda.bat  activate_pose2sim_powershell.ps1  run_pose2sim.py
dav/calibration/: Calib.qca.txt
templates/: 2d_config_template.toml  3d_config_template.toml
(+1819 files in other folders)
