[metadata]
name = pose2sim
version = 0.1.9
author = David Pagnon
author_email = contact@david-pagnon.com
description = Perform a markerless kinematic analysis from multiple calibrated views as a unified workflow from an OpenPose input to an OpenSim result.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/perfanalytics/pose2sim
keywords = markerless, kinematics, OpenPose, OpenSim, 3D human pose, biomechanics
license = BSD 3-Clause License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls = 
    Bug Tracker = https://github.com/perfanalytics/pose2sim/issues
    
[options]
zip_safe = False
python_requires = >=3.6
install_requires = 
    toml
    numpy
    opencv-python
    lxml
    matplotlib
    PyQt5
    tqdm
    anytree
    pandas
    scipy
    statsmodels
    c3d
packages = find:

[options.package_data]
* = Demo/**/*, Demo/**/**/*, Empty_project/**/*, Empty_project/**/**/*
