[metadata]
name = pose2sim
version = 0.10.6
author = David Pagnon
author_email = contact@david-pagnon.com
description = Perform a markerless kinematic analysis from multiple calibrated views as a unified workflow from an OpenPose input to an OpenSim result.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/perfanalytics/pose2sim
keywords = markerless, kinematics, OpenPose, OpenSim, 3D human pose, biomechanics
license = BSD 3-Clause License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Modeling
project_urls = 
    Bug Tracker = https://github.com/perfanalytics/pose2sim/issues
    
[options]
zip_safe = False
python_requires = >=3.9
install_requires = 
    toml
    numpy>=1.19
    lxml==4.9.4
    matplotlib
    mpl_interactions
    # Pillow
    PyQt5
    tqdm
    anytree
    pandas>=1.5
    scipy
    psutil
    statsmodels
    filterpy
    ipython
    c3d
    tensorflow
    # torch
    rtmlib
    # onnxruntime
    openvino
    opencv-python
    sports2d
packages = find_namespace:

[options.package_data]
* = OpenSim_Setup/**, MarkerAugmenter/**, Demo_SinglePerson/**, Demo_SinglePerson/**/.*, Demo_SinglePerson/**/**/.*, Demo_SinglePerson/**/**/**/.*, Demo_MultiPerson/**, Demo_MultiPerson/**/.*, Demo_Batch/**, Demo_Batch/**/.*, Demo_Batch/**/**/.*
