[metadata]
name = pose2sim
version = 0.10.16
author = David Pagnon
author_email = contact@david-pagnon.com
description = Perform a markerless kinematic analysis from multiple calibrated views as a unified workflow from an OpenPose input to an OpenSim result.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/perfanalytics/pose2sim
keywords = markerless, kinematics, OpenPose, OpenSim, 3D human pose, biomechanics
license = BSD 3-Clause License
license_files = LICENSE
platform = any
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Modeling
project_urls = 
    Bug Tracker = https://github.com/perfanalytics/pose2sim/issues
    
[options]
zip_safe = False
python_requires = >=3.9
install_requires = 
    toml
    numpy>=1.19
    lxml==4.9.4
    matplotlib
    mpl_interactions
    # Pillow
    PyQt5
    tqdm
    anytree
    pandas>=1.5
    scipy
    statsmodels
    filterpy
    ipython
    c3d
    tensorflow
    # torch
    rtmlib
    # onnxruntime
    openvino
    opencv-python
    deep-sort-realtime
packages = find_namespace:

[options.package_data]
* = OpenSim_Setup/**, MarkerAugmenter/**, Demo_SinglePerson/**, Demo_SinglePerson/**/.*, Demo_SinglePerson/**/**/.*, Demo_SinglePerson/**/**/**/.*, Demo_MultiPerson/**, Demo_MultiPerson/**/.*, Demo_Batch/**, Demo_Batch/**/.*, Demo_Batch/**/**/.*

[options.entry_points]
console_scripts = 
    AlphaPose_to_OpenPose = Pose2Sim.Utilities.AlphaPose_to_OpenPose:main
    Blazepose_runsave = Pose2Sim.Utilities.Blazepose_runsave:main
    bodykin_from_mot_osim = Pose2Sim.Utilities.bodykin_from_mot_osim:main
    c3d_to_trc = Pose2Sim.Utilities.c3d_to_trc:main
    calib_easymocap_to_toml = Pose2Sim.Utilities.calib_easymocap_to_toml:main
    calib_from_checkerboard = Pose2Sim.Utilities.calib_from_checkerboard:main
    calib_qca_to_toml = Pose2Sim.Utilities.calib_qca_to_toml:main
    calib_toml_to_easymocap = Pose2Sim.Utilities.calib_toml_to_easymocap:main
    calib_toml_to_opencap = Pose2Sim.Utilities.calib_toml_to_opencap:main
    calib_toml_to_qca = Pose2Sim.Utilities.calib_toml_to_qca:main
    DLC_to_OpenPose = Pose2Sim.Utilities.DLC_to_OpenPose:main
    json_display_with_img = Pose2Sim.Utilities.json_display_with_img:main
    json_display_without_img = Pose2Sim.Utilities.json_display_without_img:main
    MMPose_to_OpenPose = Pose2Sim.Utilities.MMPose_to_OpenPose:main
    reproj_from_trc_calib = Pose2Sim.Utilities.reproj_from_trc_calib:main
    trc_combine = Pose2Sim.Utilities.trc_combine:main
    trc_desample = Pose2Sim.Utilities.trc_desample:main
    trc_filter = Pose2Sim.Utilities.trc_filter:main
    trc_from_easymocap = Pose2Sim.Utilities.trc_from_easymocap:main
    trc_from_mot_osim = Pose2Sim.Utilities.trc_from_mot_osim:main
    trc_gaitevents = Pose2Sim.Utilities.trc_gaitevents:main
    trc_plot = Pose2Sim.Utilities.trc_plot:main
    trc_to_c3d = Pose2Sim.Utilities.trc_to_c3d:main
    trc_Zup_to_Yup = Pose2Sim.Utilities.trc_Zup_to_Yup:main

    tests_pose2sim = Pose2Sim.Utilities.tests:main
    